--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,6 +502,7 @@ footer p {
       max-width: 100%;
   }
 }
+/* Contact Page */
 /* General Body Styles */
 body {
   font-family: Arial, sans-serif;
